--- a/log4shell/vulnerable-application/src/main/webapp/WEB-INF/web.xml
+++ b/log4shell/vulnerable-application/src/main/webapp/WEB-INF/web.xml
@@ -2,10 +2,12 @@
 <web-app>
     <servlet>
         <servlet-name>login</servlet-name>
-        <servlet-class>com.example.log4shell.login</servlet-class>
+        <servlet-class>com.example.log4shell.Login</servlet-class>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
+
 </web-app>
